# OpenArm

./: .gitignore  README.md  pyproject.toml
artifacts/task_01_quality_audit/: dataset_comparison.json
artifacts/task_02_labeling_design/: schema_validation.json
artifacts/task_03_curation_pipeline/: curation_summary.json  episode_decisions.csv  reason_counts.csv  smoothing_metrics.csv  window_counts.csv
artifacts/task_04_policy_evaluation/: episode_split.json  final_frame_inspection.json  proxy_label_manifest.json  rollout_protocol_validation.json  success_detector_metrics.json
artifacts/task_05_vla_adaptation/: action_statistics.json  batch_smoke_test.json  export_manifest.json  preprocessing_summary.json  split_manifest.json
configs/: audit.yaml  curation.yaml  evaluation.yaml  openvla_lora.yaml
docs/: assumptions.md  progress.md  readme_notes.md  submission_checklist.md
scripts/: audit_dataset.py  curate_dataset.py  evaluate_success_detector.py  export_openvla_dataset.py  recount_within_episode_duplicates.py  smoke_test_openvla_batch.py  validate_annotations.py  validate_openvla_dataset.py  validate_rollout_protocol.py
src/openarm_pipeline/: __init__.py  paths.py
tasks/task_01_quality_audit/: README.md  dataset_selection.md  findings.md
tasks/task_02_labeling_design/: README.md  alignment_and_agreement.md  annotation_schema.json  egocentric_schema.yaml  label_studio_config.xml  sample_annotation.json  teleop_schema.yaml
tests/: test_audit.py  test_curation.py  test_evaluation.py  test_labeling_schema.py  test_path_sanitize.py  test_vla_adapter.py
(+46 files in other folders)
