[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openarm-pipeline"
version = "0.1.0"
description = "OpenArm 2.0 egocentric data and teleoperation pipeline (DeepAware AI take-home)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenArm Take-Home" }]
dependencies = [
  "datasets>=2.19.0,<4.0",
  "huggingface_hub>=0.23.0,<1.0",
  "numpy>=1.26.0,<3.0",
  "pandas>=2.2.0,<3.0",
  "pyarrow>=15.0.0,<22.0",
  "matplotlib>=3.8.0,<4.0",
  "opencv-python-headless>=4.9.0,<5.0",
  "Pillow>=10.0.0,<12.0",
  "PyYAML>=6.0.1,<7.0",
  "scipy>=1.11.0,<2.0",
  "tqdm>=4.66.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0",
]
lerobot = [
  "lerobot>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openarm_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
